# vault-mcp

./: .gitignore  README.md  pyproject.toml
dvs/: context.json  db.ipynb  db.py  experiment.ipynb  memory.json  node.py  seed.py  users.json  vectorstore.ipynb  vectorstore.py
server/: .gitignore  Dockerfile  app.py  main.py  memory.py  pyproject.toml  requirements.txt  smithery.yaml
server/dvs/: db.ipynb  db.py  seed.py  vectorstore.ipynb  vectorstore.py
server/dvs/__mock__/: memory.json  users.json
server/dvs/utils/: query.py  seed.py
vault-app/: badge.tsx  button.tsx  card.tsx  eslint.config.mjs  package-lock.json  package.json
vault-app/src/app/: layout.tsx  page.tsx
vault-app/src/app/api/context/: route.ts
vault-app/src/app/api/memory/: route.ts
vault-app/src/app/api/projects/: route.ts
vault-app/src/app/api/user/: route.ts
vault-app/src/app/dashboard/: layout.tsx  page.tsx
vault-app/src/app/dashboard/context/: page.tsx
vault-app/src/app/dashboard/data/: page.tsx
vault-app/src/app/dashboard/keys/: page.tsx
vault-app/src/app/dashboard/memories/: page.tsx
vault-app/src/app/dashboard/projects/: page.tsx
vault-app/src/lib/: redis.ts
weather/: pyproject.toml  weather.py
