[project]
name = "vault-mcp"
version = "0.1.0"
description = "Memory and context sharing MCP server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "enrichmcp>=0.4.7",
    "numpy>=2.3.1",
    "redis>=6.2.0",
    "redisvl>=0.8.0",
    "sentence-transformers>=5.0.0",
]

[tool.ty.environment]
root = ["./server"]
